# MultiTask

./: .gitignore  main.py  pyproject.toml
Notebooks/: 00_reg_cls.ipynb  00_reg_cls.py  01_reg_cls_wandb.py
