[project]
name = "multitask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "flax>=0.8.5",
    "ipykernel>=6.31.0",
    "jax>=0.4.30",
    "jax[cuda12] ; sys_platform == 'linux'",
    "keras>=3.10.0",
    "matplotlib>=3.9.4",
    "optax>=0.2.4",
    "wandb>=0.25.0",
]
